# minishell_test

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  README.rst  args.py  config.py  lorem.txt  main.py  minishell_test  minishell_test.config  random_status.py  requirements-dev.txt  requirements.txt  run  setup.cfg  setup.py  suite.py  suites.py  test.py  test.sh  tox.ini  try  utils.py
docs/: README.rst  bonus.rst  build-readme-md  conf.py  config.rst  config.rst.bak  custom_test.rst  developers.rst  disclaimer.rst  gettingstarted.rst  gettingstarted.rst.inc  index.rst  linux.rst  memory_leaks.rst  options.rst
minishell_test/: __main__.py  args.py  colors.py  config.py  hooks.py  minishell_test.cfg  result_config.cfg  sandbox.py
minishell_test/data/: default.cfg  lorem
minishell_test/suite/: __init__.py  decorator.py  suite.py
minishell_test/suites/: __init__.py  builtin.py  cmd.py  flow.py  misc.py  path.py  preprocess.py
minishell_test/test/: __init__.py  captured.py  result.py  test.py
src/: args.py  config.py  hooks.py  main.py  sandbox.py
src/suite/: __init__.py  decorator.py  suite.py
src/suites/: __init__.py  builtin.py  cmd.py  flow.py  misc.py  operation.py  parenthesis.py  path.py  preprocess.py  status.py
src/test/: __init__.py  captured.py  result.py  test.py
suites/: __init__.py  builtin.py  cmd.py  operation.py  parenthesis.py  preprocess.py  status.py  suites.py
tests/: builtin.sh  conftest.py  helpers.py  test_colors.py  test_config.py  test_hooks.py  test_sandbox.py
tests/suite/: test_suite.py
tests/test/: test_captured.py  test_result.py  test_test.py
