[metadata]
name = minishell_test
version = 0.0.2
license = GPL2
license_file = LICENSE
description = test for the minishell project of school 42
long_description = file: README.md
long_description_content_type = text/markdown
author = Charles Cabergs
author_email = me@cacharle.xyz
maintainer = Charles Cabergs
maintainer_email = me@cacharle.xyz
url = https://github.com/cacharle/minishell_test
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6

[flake8]
ignore = E501,E221,W503,E241
select = E,F,W,C4,N,ECE,CCR
max-cognitive-complexity = 6

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
