[metadata]
name = minishell_test
version = 1.1.3
license = GPL2
license_file = LICENSE
description = test for the minishell project of school 42
long_description = file: README.md
long_description_content_type = text/markdown
author = Charles Cabergs
author_email = me@cacharle.xyz
maintainer = Charles Cabergs
maintainer_email = me@cacharle.xyz
url = https://github.com/cacharle/minishell_test
project_urls =
    Tracker = https://github.com/cacharle/minishell_test/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6

[options.package_data]
minishell_test = data/*

[options.entry_points]
console_scripts =
    minishell_test = minishell_test.__main__:main

[flake8]
ignore = E501,E221,W504,E241
select = E,F,W,C4,N
max-cognitive-complexity = 6

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
